change firecamp image

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </div>
 
     <div class='sprite-shadowed' style="position: absolute; left: 143px; top:200px">
-        <img width="200px" src="images/26-266264_campfire-cartoon-bonfire-clip-art-black-survival-bracelet-outdoor-paracord-flint-fire.png" />
+        <img width="200px" src="https://liubavyshka.ru/_ph/61/2/903705900.gif" />
     </div>
 
     <script>
