--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <img data-width="300px" src="./images/sofa-transparent-fancy-1.png">
         </div>
         <div class="decor">
-            <img data-width="300px" src="./images/26-266264_campfire-cartoon-bonfire-clip-art-black-survival-bracelet-outdoor-paracord-flint-fire.png">
+            <img data-width="300px" src="https://liubavyshka.ru/_ph/61/2/903705900.gif">
         </div>
     </div>
     <script src="./decor.js"></script>
