change fire img

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <img data-width="300px" src="./images/sofa-transparent-fancy-1.png">
         </div>
         <div class="decor">
-            <img data-width="300px" src="https://liubavyshka.ru/_ph/61/2/903705900.gif">
+            <img data-width="300px" src="https://vignette.wikia.nocookie.net/minecraft/images/8/81/CampfireV2.gif">
         </div>
     </div>
     <script src="./decor.js"></script>
@@ -73,7 +73,7 @@
     </div>
 
     <div class='sprite-shadowed' style="position: absolute; left: 143px; top:200px">
-        <img width="200px" src="https://liubavyshka.ru/_ph/61/2/903705900.gif" />
+        <img width="200px" src="https://vignette.wikia.nocookie.net/minecraft/images/8/81/CampfireV2.gif" />
     </div>
 
     <script>
